--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -1,10 +1,6 @@
 // Fonts
-$font: Arial, "Helvetica Neue", Helvetica, sans-serif;
-
-$h1-fz-mobile: 20px;
-$h1-fz-tablet: 32px;
-$h1-fz-desktop: 48px;
-$h1-fw: 400;
+$font-title: 'Raleway', sans-serif;
+$font: 'Open Sans', sans-serif;
 
 // colors
 $color-dark: #152B3C;
@@ -12,5 +8,7 @@ $color-accent: #D46240;
 $color-light: #FBF2DA;
 
 // indents
+$gap: 30px;
+$gap-half: calc($gap / 2);
 
 // breakpoints
