--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -1,3 +1,20 @@
 .footer {
+  padding: 30px 0;
   background-color: $color-dark;
+  color: $color-light;
+}
+
+.footer-inner {
+  @include inner;
+}
+
+.footer-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.copyright {
+  font-size: 20px;
+  line-height: 27px;
 }
