--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,8 +1,20 @@
 .header {
+  padding: 25px 0;
   background-color: $color-dark;
 }
 
+.header-inner {
+  @include inner;
+}
+
+.header-wrap {
+  display: flex;
+  align-items: center;
+}
+
 .header-logo {
+  margin-right: auto;
+  font-family: $font-title;
   color: $color-light;
   font-weight: 300;
   font-size: 42px;
@@ -11,6 +23,7 @@
 }
 
 .header-phone {
+  margin-left: 100px;
   color: $color-light;
   font-size: 24px;
   line-height: 33px;
