--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: $font;
+  color: $color-dark;
+}
+
+img {
+  max-width: 100%;
 }
