разметка внутренних страниц, чутка стилизации внутренних страниц, позиционирование шапки сайта, позиционирование абсолютное внутри относительного для подписи поверх изображения

--- a/src/styles/blocks/_btn.scss
+++ b/src/styles/blocks/_btn.scss
@@ -12,6 +12,10 @@
   border-radius: 5px;
   border: none;
   cursor: pointer;
+
+  &:disabled {
+    background-color: rgba($color-dark, .1);
+  }
 }
 
 .btn-full {
