--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,4 +14,8 @@
 @import "blocks/_form";
 @import "blocks/_footer";
 @import "blocks/_social";
+@import "blocks/_reviews";
+@import "blocks/_faq";
+@import "blocks/_contacts";
+@import "blocks/_works";
 
