начат адаптив главной страницы - шапка, секция promo

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -6,6 +6,14 @@
   width: 100%;
   padding: 25px 0;
   background-color: $color-dark;
+
+  @media (max-width: 1279px) {
+    padding: 28px 0;
+  }
+
+  @media (max-width: 767px) {
+    padding: 4px 0;
+  }
 }
 
 .header-inner {
@@ -25,6 +33,16 @@
   font-size: 42px;
   line-height: 49px;
   text-decoration: none;
+
+  @media (max-width: 1279px) {
+    font-size: 36px;
+    line-height: 42px;
+  }
+
+  @media (max-width: 767px) {
+    font-size: 24px;
+    line-height: 28px;
+  }
 }
 
 .header-phone {
@@ -33,4 +51,23 @@
   font-size: 24px;
   line-height: 33px;
   text-decoration: none;
+
+  @media (max-width: 1279px) {
+    margin-left: 0;
+  }
+
+  @media (max-width: 767px) {
+    display: none;
+  }
+}
+
+.burger {
+  display: none;
+  margin-left: 35px;
+  width: 45px;
+  height: 45px;
+
+  @media (max-width: 1279px) {
+    display: block;
+  }
 }
