--- a/src/styles/blocks/_promo.scss
+++ b/src/styles/blocks/_promo.scss
@@ -9,10 +9,15 @@
 
 .promo-wrap {
   display: flex;
+
+  @media (max-width: $mobile-max) {
+    display: block;
+  }
 }
 
 .promo-info {
-  flex-basis: 50%;
+  width: 50%;
+  // flex-basis: 50%;
   flex-shrink: 0;
   padding-right: $gap-half;
 }
@@ -24,6 +29,16 @@
   line-height: 44px;
   color: $color-accent;
 
+  @media (max-width: $tablet-max) {
+    font-size: 24px;
+    line-height: 33px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 18px;
+    line-height: 25px;
+  }
+
   span {
     display: block;
     margin-bottom: 20px;
@@ -31,11 +46,22 @@
     font-weight: 300;
     font-size: 116px;
     line-height: 136px;
+
+    @media (max-width: $tablet-max) {
+      font-size: 64px;
+      line-height: 75px;
+    }
+
+    @media (max-width: $mobile-max) {
+      font-size: 54px;
+      line-height: 63px;
+    }
   }
 }
 
 .promo-visual {
-  flex-basis: 50%;
+  width: 50%;
+  // flex-basis: 50%;
   flex-shrink: 0;
   padding-left: $gap-half;
 }
