--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -6,12 +6,13 @@
 
 .footer-inner {
   @include inner;
-}
-
-.footer-wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: $mobile-max) {
+    flex-direction: column-reverse;
+  }
 }
 
 .copyright {
