--- a/src/styles/blocks/_form.scss
+++ b/src/styles/blocks/_form.scss
@@ -4,6 +4,16 @@
   width: 66.66%;
   margin: 70px auto 0;
   border: 1px solid #000;
+
+  @media (max-width: $tablet-max) {
+    width: auto;
+    margin-left: -$gap-half;
+    margin-right: -$gap-half;
+  }
+
+  @media (max-width: $mobile-max) {
+    display: block;
+  }
 }
 
 .form-field {
