--- a/src/styles/blocks/_services.scss
+++ b/src/styles/blocks/_services.scss
@@ -1,6 +1,14 @@
 .services {
   padding: 100px 0;
   background-color: $color-light;
+
+  @media (max-width: $tablet-max) {
+    padding: 70px 0 88px;
+  }
+
+  @media (max-width: $mobile-max) {
+    padding: 50px 0;
+  }
 }
 
 .services-inner {
@@ -14,15 +22,33 @@
 .services-list {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 20px;
   margin-left: -$gap-half;
   margin-right: -$gap-half;
   list-style: none;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 0;
+  }
+
+  @media (max-width: $mobile-max) {
+    display: block;
+    margin-top: 50px;
+  }
 }
 
 .services-item {
   flex-basis: 50%;
   margin-top: 50px;
   padding: 0 $gap-half;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 60px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin-top: 40px;
+  }
 }
 
 .services-caption {
@@ -31,10 +57,27 @@
   font-weight: 500;
   font-size: 40px;
   line-height: 47px;
+
+  @media (max-width: $tablet-max) {
+    margin-bottom: 20px;
+    font-size: 36px;
+    line-height: 42px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin-bottom: 15px;
+    font-size: 32px;
+    line-height: 38px;
+  }
 }
 
 .services-text {
   font-weight: 300;
   font-size: 28px;
   line-height: 38px;
+
+  @media (max-width: $mobile-max) {
+    font-size: 24px;
+    line-height: 33px;
+  }
 }
