--- a/src/styles/common/_common.scss
+++ b/src/styles/common/_common.scss
@@ -8,6 +8,10 @@ body {
   padding-top: 98px;
   font-family: $font;
   color: $color-dark;
+
+  @media (max-width: $mobile-max) {
+    padding-top: 52px;
+  }
 }
 
 img {
