--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -12,4 +12,14 @@
   font-size: 58px;
   line-height: 68px;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    font-size: 48px;
+    line-height: 56px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 32px;
+    line-height: 38px;
+  }
 }
