добавлена библиотека jQuery

--- a/src/styles/blocks/_main-menu.scss
+++ b/src/styles/blocks/_main-menu.scss
@@ -10,6 +10,12 @@
     border-top: 1px solid $color-light;
   }
 
+  &.is-open {
+    @media (max-width: $tablet-max) {
+      display: block;
+    }
+  }
+
   ul {
     display: flex;
     list-style: none;
