--- a/src/styles/blocks/_works.scss
+++ b/src/styles/blocks/_works.scss
@@ -10,3 +10,23 @@
 .works-title {
   @include section-title;
 }
+
+.works-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -$gap-half;
+  margin-right: -$gap-half;
+  list-style: none;
+}
+
+.works-item {
+  flex-basis: 25%;
+  padding: $gap-half;
+}
+
+.works-card {
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0px 0px 8px rgba($color-accent, .2);
+  border-radius: 4px;
+}
