--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,7 @@
 @import "common/_mixins";
 @import "common/_fonts";
 @import "common/_common";
+@import "common/_animations";
 
 // blocks
 @import "blocks/_header";
